endpoints: bids (get & post)
